# rat

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: define.rs  fat32.rs  lib.rs
tests/: fat32.rs  partition_area.rs  system_area.rs
