[package]
name = "rat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.14"
